Node Wrangler puts out an error when adding image sequence node #59962

Closed
opened 2018-12-29 18:27:23 +01:00 by heini · 6 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken:
2.80, 7c438e5366b2 win64, blender2.8, 2018-12-16

Short description of error
When adding an image sequence node, no node is created and I get the following message

Traceback (most recent call last):
  File "D:\desktop\blender28\2.80\scripts\startup\bl_operators\node.py", line 130, in invoke
    self.store_mouse_cursor(context, event)
  File "D:\desktop\blender28\2.80\scripts\startup\bl_operators\node.py", line 70, in store_mouse_cursor
    if context.region.type == 'WINDOW':
AttributeError: 'NoneType' object has no attribute 'type'
**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80, 7c438e5366b2 win64, blender2.8, 2018-12-16 **Short description of error** When adding an image sequence node, no node is created and I get the following message ``` Traceback (most recent call last): File "D:\desktop\blender28\2.80\scripts\startup\bl_operators\node.py", line 130, in invoke self.store_mouse_cursor(context, event) File "D:\desktop\blender28\2.80\scripts\startup\bl_operators\node.py", line 70, in store_mouse_cursor if context.region.type == 'WINDOW': AttributeError: 'NoneType' object has no attribute 'type' ```
Author

Added subscriber: @heini

Added subscriber: @heini
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-30 00:18:19 +01:00
Member

Confirmed, checking...

Confirmed, checking...

Added subscriber: @padthai

Added subscriber: @padthai

This issue was referenced by blender/blender@8b4e0eb88e

This issue was referenced by blender/blender@8b4e0eb88e715392490aefa520d2c5444f084a44

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#59962
No description provided.