Fix T59962, T60130: error adding image sequence with node wrangler.

The region should be restored correctly, there is already a similar test for
areas to be preserved.