source/blender/windowmanager/intern/wm_event_system.c
@@ -3365,7 +3365,8 @@ void WM_event_modal_handler_region_replace(wmWindow *win, const ARegion *old_reg
 	LISTBASE_FOREACH (wmEventHandler *, handler_base, &win->modalhandlers) {
 		if (handler_base->type == WM_HANDLER_TYPE_OP) {
 			wmEventHandler_Op *handler = (wmEventHandler_Op *)handler_base;
-			if (handler->context.region == old_region) {
+			/* fileselect handler is quite special... it needs to keep old region stored in handler, so don't change it */
+			if ((handler->context.region == old_region) && (handler->is_fileselect == false)) {
 				handler->context.region = new_region;
 				handler->context.region_type = new_region ? new_region->regiontype : RGN_TYPE_WINDOW;
 			}
